# pointnet_vlad_ros

./: .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE  build.sh  intensity_map.rviz  lane_line.rviz
build_file/: ceres.bazel.BUILD  eigen.BUILD  pcl.BUILD  pcl_conversions.BUILD
launch/: pointnetvlad.launch
pointcloud_intensity/include/: cluster.h  global_map.h  intensity_grid.h  intensity_map.h  submap.h  visualize.h
pointcloud_intensity/launch/: point_intensity.launch  pointnetvlad.launch
pointcloud_intensity/src/: cluster.cc  global_map.cc  intensity_grid.cc  intensity_map.cc  main.cc  submap.cc  visualize.cc
pointnetvald/src/datatype/: pointnet_vlad_type.cc
pointnetvald/src/loopclosure/: loop_closure.cc
pointnetvlad/: CMakeLists.txt  package.xml
pointnetvlad/include/datatype/: pointnet_vlad_type.h
pointnetvlad/include/loopclosure/: loop_closure.h
pointnetvlad/include/visualize/: visualize.h
pointnetvlad/src/: read_file_main.cc
pointnetvlad/src/datatype/: pointnet_vlad_type.cc
pointnetvlad/src/loopclosure/: loop_closure.cc
pointnetvlad/src/visualize/: visualize.cc
