# Copyright 2018 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Cartographer is a system that provides real-time simultaneous localization
# and mapping (SLAM) in 2D and 3D across multiple platforms and sensor
# configurations.
licenses(["notice"])

COPTS = [
    "-std=c++11",
]

LINK_OPTS = []

cc_binary(
    name = "pointnetvlad",
    srcs = glob([
        "pointnetvlad/**/*.cc",
        "pointnetvlad/**/*.h",
    ]),
    copts = COPTS,
    defines = [
        # "PUBLISH_DEBUG_TOPIC"
    ],
    includes = [
        "pointnetvlad/include",
    ],
    linkstatic = True,
    stamp = 1,
    deps = [
        "@ceres",
        "@com_github_eigen_eigen//:eigen",
        "@gs//:gs",
        "@io_bazel_rules_ros//ros:diagnostic_msgs",
        "@io_bazel_rules_ros//ros:geometry_msgs",
        "@io_bazel_rules_ros//ros:nav_msgs",
        "@io_bazel_rules_ros//ros:roscpp",
        "@io_bazel_rules_ros//ros:std_msgs",
        "@io_bazel_rules_ros//ros:tf",
        "@io_bazel_rules_ros//ros:visualization_msgs",
        "@link_stamp//:build_revision",
    ],
)

cc_binary(
    name = "intensity_test",
    srcs = glob([
        "pointcloud_intensity/**/*.cc",
        "pointcloud_intensity/**/*.h",
    ]),
    copts = COPTS,
    defines = [
        # "PUBLISH_DEBUG_TOPIC"
    ],
    includes = [
        "pointcloud_intensity/include",
    ],
    linkstatic = True,
    stamp = 1,
    deps = [
        "@ceres",
        "@com_github_eigen_eigen//:eigen",
        "@gs//:gs",
        "@io_bazel_rules_ros//ros:diagnostic_msgs",
        "@io_bazel_rules_ros//ros:geometry_msgs",
        "@io_bazel_rules_ros//ros:nav_msgs",
        "@io_bazel_rules_ros//ros:roscpp",
        "@io_bazel_rules_ros//ros:std_msgs",
        "@io_bazel_rules_ros//ros:tf",
        "@io_bazel_rules_ros//ros:visualization_msgs",
        "@link_stamp//:build_revision",
    ],
)
